Fix team members overlay on small screens

--- a/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_team.scss
+++ b/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_team.scss
@@ -46,14 +46,15 @@
 		}
 		&:hover {
 			.trp-member-overlay {
-				height: 340px;
+				height: 100%;
 				position: absolute;
-				width: 340px;
-				background-color: rgba(107,200,202,0.7);
+				width: 100%;
+				background-color: rgba(107,200,202,.7);
 				display: block;
 				border-radius: 100%;
 				padding-top: 140px;
-				margin-left: 5px;
+				max-width: 340px;
+				max-height: 340px;
 			}
 		}
 	}
@@ -141,4 +142,12 @@
 	h2 {
 		font-weight: bold;
 	}
+}
+
+.trp-member-overlay-container {
+	position: relative;
+	max-height: 340px;
+	max-width: 340px;
+	margin-left: auto;
+	margin-right: auto;
 }
